--- a/company-website/index.html
+++ b/company-website/index.html
@@ -5,17 +5,29 @@
     <link rel="stylesheet" href="./css/style.css" />
   </head>
   <body>
-    <div class="header">
-      <h1>Company Name</h1>
-      <p>We are a leading company in the field of...</p>
-    </div>
-    <a class="pageLink" href="index.html" class="pageLink">Home</a>
-    <a class="pageLink" href="contact.html">Contact</a>
-    <a class="pageLink" href="about.html">About</a>
-    <a class="pageLink" href="jobs.html">jobs</a>
-    <a class="pageLink" href="projects.html">projects</a>
-    <a class="pageLink" href="location.html">location</a>
+    <header>
+      <div class="container">
+        <div class="headContent">
+          <img src="images/Yeni hayat.png" alt="">
+          <nav>
+            <a class="pageLink" href="index.html">Home</a>
+            <a class="pageLink" href="contactus.html">Contact</a>
+            <a class="pageLink" href="about.html">About</a>
+            <a class="pageLink" href="ourteam.html">Our Team</a>
+            <a class="pageLink" href="projects.html">projects</a>
+            <a class="pageLink" href="location.html">location</a>
+           </nav>
 
-    <p>This is the Home page.</p>
+        </div>
+      </div>
+    </header>
+
+<main class='home'>
+  <div class="container">
+    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quaerat, repudiandae unde cum iste minima dignissimos soluta fugit repellendus 
+      veniam itaque, corporis distinctio at perferendis quis, quae reiciendis. Sapiente, provident illum!</p>
+  </div>
+</main>
+   
   </body>
 </html>
