--- a/company-website/location.html
+++ b/company-website/location.html
@@ -1,16 +1,26 @@
 <!DOCTYPE html>
-<!-- c:/work/javascript/Html/company-website/location.html -->
 <html>
     <head>
         <title>Location</title>
+        <link rel="stylesheet" href="css/style.css">
     </head>
     <body>
-        <a href="index.html">Home</a>
-        <a href="contact.html">Contact</a>
-        <a href="about.html">About</a>
-        <a href="jobs.html">jobs</a>
-        <a href="projects.html">projects</a>
-        <a href="location.html">projects</a>
+        <header>
+            <div class="container">
+              <div class="headContent">
+                <img src="images/Yeni hayat.png" alt="">
+                <nav>
+                  <a class="pageLink" href="index.html">Home</a>
+                  <a class="pageLink" href="contactus.html">Contact</a>
+                  <a class="pageLink" href="about.html">About</a>
+                  <a class="pageLink" href="ourteam.html">Our Team</a>
+                  <a class="pageLink" href="projects.html">projects</a>
+                  <a class="pageLink" href="location.html">location</a>
+                 </nav>
+      
+              </div>
+            </div>
+          </header>
 
     </body>
     </html>
