--- a/company-website/about.html
+++ b/company-website/about.html
@@ -1,15 +1,32 @@
 <html>
   <head>
     <title>About</title>
+    <link rel="stylesheet" href="css/style.css">
   </head>
   <body>
-    <a href="index.html">Home</a>
-    <a href="contact.html">Contact</a>
-    <a href="about.html">About</a>
-    <a href="jobs.html">jobs</a>
-    <a href="projects.html">projects</a>
-    <a href="location.html">projects</a>
+    <header>
+      <div class="container">
+        <div class="headContent">
+          <img src="images/Yeni hayat.png" alt="">
+          <nav>
+            <a class="pageLink" href="index.html">Home</a>
+            <a class="pageLink" href="contactus.html">Contact</a>
+            <a class="pageLink" href="about.html">About</a>
+            <a class="pageLink" href="ourteam.html">Our Team</a>
+            <a class="pageLink" href="projects.html">projects</a>
+            <a class="pageLink" href="location.html">location</a>
+           </nav>
 
-    <p>This is the About page.</p>
+        </div>
+      </div>
+    </header>
+    <section>
+      <h2>About Our Company</h2>
+      <p class="about"> Lorem ipsum dolor sit amet consectetur adipisicing elit. Dignissimos atque obcaecati,
+         exercitationem voluptatem adipisci quaerat enim. Sunt eum eos,
+         saepe odio nostrum mollitia. Id neque expedita doloremque! Voluptate, deleniti praesentium?</p>
+
+    </section>
+
   </body>
 </html>
