--- a/company-website/about.html
+++ b/company-website/about.html
@@ -21,12 +21,19 @@
       </div>
     </header>
     <section>
-      <h2>About Our Company</h2>
-      <p class="about"> Lorem ipsum dolor sit amet consectetur adipisicing elit. Dignissimos atque obcaecati,
-         exercitationem voluptatem adipisci quaerat enim. Sunt eum eos,
-         saepe odio nostrum mollitia. Id neque expedita doloremque! Voluptate, deleniti praesentium?</p>
+      <div class="about">
+        <h2 class="habout">Crafting Exceptional Design-Build Services</h2>
 
+      <p class="pabout"> At our company, we swiftly build
+         and design unique projects, providing tailored solutions
+          with innovative architecture. Whether you have a clear vision or need
+           assistance shaping your ideas, we're dedicated to creating exceptional outcomes for you.
+            Explore our expertise in architecture and
+         unique design for your project.</p>
+        </div>
+      <img class="aboutimg" src="images/team work.jpg" width="300px" height="300px" style="display: inline;" alt="">
     </section>
+
 
   </body>
 </html>
