--- a/company-website/index.html
+++ b/company-website/index.html
@@ -28,6 +28,46 @@
       veniam itaque, corporis distinctio at perferendis quis, quae reiciendis. Sapiente, provident illum!</p>
   </div>
 </main>
+
+<footer>
+
+  <div class="container">
+    <div>
+    <hr>
+    <h5>Yeni hayat Company</h5>
+    <hr>
+    <address>
+      <p>Tel : 000-000-000</p>
+      <p>Address : EGYPT</p>
+      <p>Fax : 000-000-000</p>
+    </address>
+</div>
+<div>
+  <hr>
+  <h5>Important links</h5>  
+  <hr>
+  <p>
+    <a href="index.html" style="color: #212121; text-decoration: underline;">Visit Us</a>
+  </p>
+  <p>
+    <a href="about.html" target="_blank" style="color: #131313; text-decoration: underline;">About Us</a>
+  </p>
+  <p>
+    <a href="contactus.html" target="_blank" style="color: #1b1a1a; text-decoration: underline;">Contact Us</a>
+  </p>
+  <p>
+    <a href="projects.html" target="_blank" style="color: #1b1a1a; text-decoration: underline;"> Projects</a>
+  </p>
+  <p>
+    <a href="ourteam.html" target="_blank" style="color: #1b1a1a; text-decoration: underline;">Our Team</a>
+  </p>
+  <p>
+    <a href="location.html" target="_blank" style="color: #1b1a1a; text-decoration: underline;">Location</a>
+  </p>
+</div>
+
+  </div>
+</footer>
    
   </body>
 </html>
