--- a/company-website/ourteam.html
+++ b/company-website/ourteam.html
@@ -57,6 +57,13 @@
                 <p style="text-align: center;">Architect & Engineer</p> 
               </div>
             </div>
+            <div class="card">
+              <img src="images/yousef.jpg" alt="Avatar">
+              <div style="padding: 2px 16px;">
+                <h4 style="text-align: center;"><b>Yousef ahmed</b></h4> 
+                <p style="text-align: center;">Interior Designer</p> 
+              </div>
+            </div>
 
 
             
