--- a/company-website/index.html
+++ b/company-website/index.html
@@ -3,6 +3,7 @@
   <head>
     <title>Home</title>
     <link rel="stylesheet" href="./css/style.css" />
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.7/css/all.css">
   </head>
   <body>
     <header>
@@ -29,44 +30,32 @@
   </div>
 </main>
 
-<footer>
-
+<footer class="footer">
   <div class="container">
-    <div>
-    <hr>
-    <h5>Yeni hayat Company</h5>
-    <hr>
-    <address>
+      <div class="footcontent" style="line-height: 38px;">  
+        <a class="link" href="index.html">Home</a>
+        <a class="link" href="about.html">About Us</a>
+        <a class="link" href="contactus.html">Contact Us</a>
+        <a class="link" href="projects.html"> Projects</a>
+      </div>
+    <div class="footcontent">
+    <address style="line-height: 42px;">
       <p>Tel : 000-000-000</p>
       <p>Address : EGYPT</p>
       <p>Fax : 000-000-000</p>
     </address>
-</div>
-<div>
-  <hr>
-  <h5>Important links</h5>  
-  <hr>
-  <p>
-    <a href="index.html" style="color: #212121; text-decoration: underline;">Visit Us</a>
-  </p>
-  <p>
-    <a href="about.html" target="_blank" style="color: #131313; text-decoration: underline;">About Us</a>
-  </p>
-  <p>
-    <a href="contactus.html" target="_blank" style="color: #1b1a1a; text-decoration: underline;">Contact Us</a>
-  </p>
-  <p>
-    <a href="projects.html" target="_blank" style="color: #1b1a1a; text-decoration: underline;"> Projects</a>
-  </p>
-  <p>
-    <a href="ourteam.html" target="_blank" style="color: #1b1a1a; text-decoration: underline;">Our Team</a>
-  </p>
-  <p>
-    <a href="location.html" target="_blank" style="color: #1b1a1a; text-decoration: underline;">Location</a>
-  </p>
-</div>
-
   </div>
+  <div class="footcontent">
+    <a class="a12" href="#"><i class="fab fa-facebook-f"></i></a>
+    <a class="a12" href="#"><i class="fab fa-twitter"></i></a>
+    <a class="a12" href="#"><i class="fab fa-youtube"></i></a>
+    <a class="a12" href="#"><i class="fab fa-linkedin-in"></i></a>
+    <a class="a12" href="#"><i class="fab fa-instagram"></i></a>
+    <a class="a12" href="#"><i class="fab fa-google-plus-g"></i></a>
+  </div>
+ <span class="copy">&copy; Copyright 2024 Yeni hayat Company. All Rights Reserved.</span>
+  </div>
+ 
 </footer>
    
   </body>
