--- a/company-website/location.html
+++ b/company-website/location.html
@@ -3,6 +3,7 @@
     <head>
         <title>Location</title>
         <link rel="stylesheet" href="css/style.css">
+        <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.7/css/all.css">
     </head>
     <body>
         <header>
@@ -21,7 +22,42 @@
               </div>
             </div>
           </header>
+          <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d110502.61184928622!2d31.3408673878495!3d30.05961134437937!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x14583fa60b21beeb%3A0x79dfb296e8423bba!2z2KfZhNmC2KfZh9ix2KnYjCDZhdit2KfZgdi42Kkg2KfZhNmC2KfZh9ix2KnigKw!5e0!3m2!1sar!2seg!4v1710463091935!5m2!1sar!2seg"
+           width="50%" height="450" style="border:0; margin-left: 300px; "
+            allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade">
+          </iframe>
 
+
+
+
+
+          <footer class="footer">
+            <div class="container">
+                <div class="footcontent" style="line-height: 38px;">  
+                  <a class="link" href="index.html">Home</a>
+                  <a class="link" href="about.html">About Us</a>
+                  <a class="link" href="contactus.html">Contact Us</a>
+                  <a class="link" href="projects.html"> Projects</a>
+                </div>
+              <div class="footcontent">
+              <address style="line-height: 42px;">
+                <p>Tel : 000-000-000</p>
+                <p>Address : EGYPT</p>
+                <p>Fax : 000-000-000</p>
+              </address>
+            </div>
+            <div class="footcontent">
+              <a class="a12" href="#"><i class="fab fa-facebook-f"></i></a>
+              <a class="a12" href="#"><i class="fab fa-twitter"></i></a>
+              <a class="a12" href="#"><i class="fab fa-youtube"></i></a>
+              <a class="a12" href="#"><i class="fab fa-linkedin-in"></i></a>
+              <a class="a12" href="#"><i class="fab fa-instagram"></i></a>
+              <a class="a12" href="#"><i class="fab fa-google-plus-g"></i></a>
+            </div>
+           <span class="copy">&copy; Copyright 2024 Yeni hayat Company. All Rights Reserved.</span>
+            </div>
+           
+          </footer>
     </body>
     </html>
     
