--- a/company-website/about.html
+++ b/company-website/about.html
@@ -2,6 +2,7 @@
   <head>
     <title>About</title>
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.7/css/all.css">
   </head>
   <body>
     <header>
@@ -33,6 +34,34 @@
         </div>
       <img class="aboutimg" src="images/team work.jpg" width="300px" height="300px" style="display: inline;" alt="">
     </section>
+
+    <footer class="footer">
+      <div class="container">
+          <div class="footcontent" style="line-height: 38px;">  
+            <a class="link" href="index.html">Home</a>
+            <a class="link" href="about.html">About Us</a>
+            <a class="link" href="contactus.html">Contact Us</a>
+            <a class="link" href="projects.html"> Projects</a>
+          </div>
+        <div class="footcontent">
+        <address style="line-height: 42px;">
+          <p>Tel : 000-000-000</p>
+          <p>Address : EGYPT</p>
+          <p>Fax : 000-000-000</p>
+        </address>
+      </div>
+      <div class="footcontent">
+        <a class="a12" href="#"><i class="fab fa-facebook-f"></i></a>
+        <a class="a12" href="#"><i class="fab fa-twitter"></i></a>
+        <a class="a12" href="#"><i class="fab fa-youtube"></i></a>
+        <a class="a12" href="#"><i class="fab fa-linkedin-in"></i></a>
+        <a class="a12" href="#"><i class="fab fa-instagram"></i></a>
+        <a class="a12" href="#"><i class="fab fa-google-plus-g"></i></a>
+      </div>
+     <span class="copy">&copy; Copyright 2024 Yeni hayat Company. All Rights Reserved.</span>
+      </div>
+     
+    </footer>
 
 
   </body>
