--- a/company-website/index.html
+++ b/company-website/index.html
@@ -23,13 +23,15 @@
       </div>
     </header>
 
-<main class='home'>
-  <div class="container">
-    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quaerat, repudiandae unde cum iste minima dignissimos soluta fugit repellendus 
-      veniam itaque, corporis distinctio at perferendis quis, quae reiciendis. Sapiente, provident illum!</p>
+<div class="home">
+  <div class="overlay">
+      <div class="hocontent">
+          <h1 class="H">Spaces From Abstract To Reality</h1>
+          <p class="Par">design & build services</p>
+          <button class="btn btn1">view projects</button>
+      </div>
   </div>
-</main>
-
+</div>
 <footer class="footer">
   <div class="container">
       <div class="footcontent" style="line-height: 38px;">  
