--- a/company-website-responsive/books.html
+++ b/company-website-responsive/books.html
@@ -2,71 +2,165 @@
 <html>
   <head>
     <title>Home</title>
-    <link rel="stylesheet" href="./css/style.css" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC"
+      crossorigin="anonymous"
+    />
     <link
       rel="stylesheet"
       href="https://use.fontawesome.com/releases/v5.0.7/css/all.css"
     />
+    <link rel="stylesheet" href="./css/style.css" />
   </head>
+  <style></style>
   <body>
-    <header>
-      <div class="container">
-        <div class="headContent">
-          <img src="images/Yeni hayat.png" alt="" />
-          <nav>
-            <a class="pageLink" href="index.html">Home</a>
-            <a class="pageLink" href="contactus.html">Contact</a>
-            <a class="pageLink" href="about.html">About</a>
-            <a class="pageLink" href="ourteam.html">Our Team</a>
-            <a class="pageLink" href="projects.html">projects</a>
-            <a class="pageLink" href="location.html">location</a>
-          </nav>
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+      <div class="container-fluid">
+        <a class="navbar-brand" href="#">Navbar</a>
+        <button
+          class="navbar-toggler"
+          type="button"
+          data-bs-toggle="collapse"
+          data-bs-target="#navbarSupportedContent"
+          aria-controls="navbarSupportedContent"
+          aria-expanded="false"
+          aria-label="Toggle navigation"
+        >
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+          <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+            <li class="nav-item">
+              <a class="nav-link active" aria-current="page" href="index.html"
+                >Home</a
+              >
+            </li>
+
+            <li class="nav-item">
+              <a class="nav-link" href="contactus.html">Contact</a>
+            </li>
+
+            <li class="nav-item">
+              <a class="nav-link" href="about.html">About</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="ourteam.html">Our&nbsp;Team</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="projects.html">projects</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="location.html">location</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">Link</a>
+            </li>
+            <li class="nav-item dropdown">
+              <a
+                class="nav-link dropdown-toggle"
+                href="#"
+                id="navbarDropdown"
+                role="button"
+                data-bs-toggle="dropdown"
+                aria-expanded="false"
+              >
+                Dropdown
+              </a>
+              <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                <li><a class="dropdown-item" href="#">Action</a></li>
+                <li><a class="dropdown-item" href="#">Another action</a></li>
+                <li><hr class="dropdown-divider" /></li>
+                <li>
+                  <a class="dropdown-item" href="#">Something else here</a>
+                </li>
+              </ul>
+            </li>
+            <li class="nav-item">
+              <a
+                class="nav-link disabled"
+                href="#"
+                tabindex="-1"
+                aria-disabled="true"
+                >Disabled</a
+              >
+            </li>
+          </ul>
+          <form class="d-flex">
+            <input
+              class="form-control me-2"
+              type="search"
+              placeholder="Search"
+              aria-label="Search"
+            />
+            <button class="btn btn-outline-success" type="submit">
+              Search
+            </button>
+          </form>
         </div>
       </div>
-    </header>
-    <div id="dashboard">
-      <div id="count"></div>
-      <div id="next"></div>
-      <div id="previous"></div>
-      <div>
-        <table class="res">
+    </nav>
+
+    <div class="container">
+      <header>
+        <div class="container">
+          <div class="headContent">
+            <img src="images/Yeni hayat.png" alt="" />
+            <nav>
+              <a class="pageLink" href="index.html">Home</a>
+              <a class="pageLink" href="contactus.html">Contact</a>
+              <a class="pageLink" href="about.html">About</a>
+              <a class="pageLink" href="ourteam.html">Our Team</a>
+              <a class="pageLink" href="projects.html">projects</a>
+              <a class="pageLink" href="location.html">location</a>
+            </nav>
+          </div>
+        </div>
+      </header>
+      <div id="dashboard">
+        <div id="count"></div>
+        <div id="next"></div>
+        <div id="previous"></div>
+        <div>
+          <table class="res">
             <thead>
-                <tr>
-                    <th>id</th>
-                    <th>title</th>
-                    <th>Authors</th>
-                    <th>translators</th>
-                    <th>subjects</th>
-                    <th>bookshelves</th>
-                    <th>languages</th>
-                    <th>copyright</th>
-                    <th>media_type</th>
-                    <th>formats</th>
-                    <th>download_count</th>
-                </tr>
-              </thead>
-              <tbody id="data">
-          
-              </tbody>
-        </table>
+              <tr>
+                <th>id</th>
+                <th>title</th>
+                <th>image</th>
+                <th>Authors</th>
+                <th>translators</th>
+                <th>subjects</th>
+                <th>bookshelves</th>
+                <th>languages</th>
+                <th>copyright</th>
+                <th>media_type</th>
+                <th>formats</th>
+                <th>download_count</th>
+              </tr>
+            </thead>
+            <tbody id="data"></tbody>
+          </table>
+        </div>
       </div>
     </div>
-
-<script>
-    const api = "https://gutendex.com/books";
-    async function fetchData() {
+    <script>
+      const api = "https://gutendex.com/books";
+      async function fetchData() {
         try {
           const response = await fetch("https://gutendex.com/books");
           const data = await response.json();
-          console.log(data);
           count.innerHTML = data.count;
-         next.innerHTML = data.next;
-         previous.innerHTML = data.previous;
-         var temp = "";
-          Object.keys(data).forEach((itemData) => {
-             temp += "<tr>";
+          next.innerHTML = data.next;
+          previous.innerHTML = data.previous;
+          var temp = "";
+          data.results.forEach((itemData) => {
+            temp += "<tr>";
             temp += `<td>  ${itemData.id}  </td>`;
-            temp += `<td>  ${itemData.title}  </td>`;
+            temp += `<td>  ${itemData.title}   </td>`;
+            temp += `<td>  <img src ='${itemData.formats["image/jpeg"]}' class='response-img' alt=> </td>`;
             temp += `<td>  ${itemData.Authors}  </td>`;
             temp += `<td>  ${itemData.translators}  </td>`;
             temp += `<td>  ${itemData.subjects}  </td>`;
@@ -76,14 +170,19 @@
             temp += `<td>  ${itemData.media_type}  </td>`;
             temp += `<td>  ${itemData.formats}  </td>`;
             temp += `<td>  ${itemData.download_count}  </td></tr>`;
-
-        });
-          document.getElementById('data').innerHTML = temp;
+          });
+          document.getElementById("data").innerHTML = temp;
         } catch (error) {
           console.error("Error:", error);
         }
       }
       fetchData();
-</script>
+    </script>
 
-
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
+      crossorigin="anonymous"
+    ></script>
+  </body>
+</html>
